fix volume and name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.8'
 services:
-  MYSQL:
-    image: mysql:8.0  # imagem oficial
+  mysql_container:
+    image: mysql:8.0
     container_name: my-mysql
     restart: always
     environment:
-      - MYSQL_DATABASE=mysqlDB
+      - MYSQL_DATABASE=QuantumFinance
       - MYSQL_ROOT_PASSWORD=mysqlPW
     ports:
       - '3306:3306'
@@ -13,5 +12,5 @@ services:
       - mysql-data:/var/lib/mysql
       - ./mysql-volume/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
 volumes:
-  mysql-volume:
+  mysql-data:
     driver: local
